# CeleryForkSafetyInvestigation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
celery_examples/: __init__.py  raw_results.txt  run_test.py  tasks_pool_test.py
chroma_db_demo_crash/: .gitkeep
chroma_db_pool_test/: .gitkeep
crash_dumps/: .gitkeep
docs/: LINUX_RESULTS.md  MACOS_RESULTS.md
original_issue_code/: celery_app.py  main.py  tasks.py
scripts/: demo_crash.py  gdb_attach_child.py  lldb_attach_child.py
